  to be omitted. (RFB)
- desk/desktop.def desk/desktop.rsc desk/deskins.c: Move string to resource
  and make it translatable. (RFB)

2012-08-20
- desk/deskins.c desk/deskrsrc.c desk/deskrsrc.h: Code cleanup: simplify
  code & eliminate a global. (RFB)
- aes/gemfslib.c: Code cleanup: removed compatibility & OB_ macros. (RFB)

2012-08-21
- aes/gemctrl.c: Code cleanup: removed compatibility & OB_ macros. (RFB)

2012-08-22
- aes/gemrslib.c: Code cleanup: removed OB_ & related macros. (RFB)
- aes/optimize.c: Code cleanup: removed OB_ & compatibility macros. (RFB)
- aes/gemfslib.c aes/optimize.c aes/optimize.h: Code cleanup: eliminate
  some global functions. (RFB)

2012-08-23
- aes/gem.def aes/gem.rsc aes/gemfslib.c: Fixed regression in file selector
  and cleaned up code. (RFB)

2012-08-24
- aes/gem.def aes/gem.rsc aes/gemfslib.c aes/gemlib.h: Made the file
  selector more Atari-like. (RFB)
- aes/gemfslib.c aes/gemfslib.h aes/geminit.c aes/geminit.h aes/gemsclib.c
  aes/gemshlib.c aes/gemshlib.h: Code cleanup: eliminate some superfluous
  and confusing global variables. (RFB)

2012-08-25
- aes/gemfmlib.c aes/gemwmlib.c: Code cleanup: removed OB_ & related
  macros. (RFB)

2012-08-28
- aes/gemrslib.c: Reverted most recent changes which caused crashes in many
  programs including QED & TeraDesk. (RFB)

2012-08-29
- bios/kprint.c bios/vt52.c bios/vt52.h: Fixed crash when dopanic() is called
  before vt52 is initialized. (VRI)
- include/kprint.h: Safer dopanic() prototype. (VRI)
- bios/screen.c: Initialize the VBL interrupt handler before using vsync().
- aes/gemfslib.c: Fix regression in handling paths longer than the directory
  line. (RFB)
- aes/gemfslib.c: Code cleanup: eliminate compatibility macros. (RFB)
- aes/gemfslib.c: Do not try to maintain slider position between file
  selector calls (simpler & more Atari-like). (RFB)
- aes/gemfslib.c: Code cleanup: eliminate LEN_FTITLE and remove unneeded
  arguments to fs_newdir(). (RFB)